--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -26,19 +26,6 @@ block after_page
         prevEl: ".swiper-button-prev"
       }
     });
-    //- const Userswiper = new Swiper(".user-slider", {
-    //-   direction: "horizontal",
-    //-   //- loop: true,
-    //-   //- effect: "fade",
-    //-   //- fadeEffect: {
-    //-   //-   crossFade: true
-    //-   //- },
-    //-   //- speed: 400,
-    //-   //- navigation: {
-    //-   //-   nextEl: ".swiper-button-next",
-    //-   //-   prevEl: ".swiper-button-prev"
-    //-   //- }
-    //- });
 block container
   .c-swiper
     .swiper
@@ -61,7 +48,7 @@ block container
               p
                 | Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.
               a.button(href='https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation', target="_blank") Đăng Ký Tư Vấn
-        
+
       .swiper-pagination
       .swiper-nav-wrapper
         .swiper-button-prev
@@ -70,81 +57,81 @@ block container
   .l-container
     .c-message
       .c-message_inner
-        p WE MAKE MONEY WORK IN YOUR FAVOR
+        p WE MAKE MONEY <br> WORK IN YOUR FAVOR
     .c-solution
       .c-solution_inner
-        h3 Our Solution
+        h3 Insurance Solutions
         ul
           li
             //- .c-solution_tag Tax Planning
             .c-solution_name Tax Planning
             .c-solution_icon
-              img.lazy(data-src=path+"assets/images/crop.png")
+              img.lazyload(loading="lazy", width="70" height="70"  data-src=path+"assets/images/money-bag.png" src=path+"assets/images/money-bag.png")
             .c-solution_extra Analyze financial plans and offer the best solutions for customers to get maximum tax reduction for income, financial investment, insurance
           li
             //- .c-solution_tag Retirement Planning
             .c-solution_name Retirement Planning
             .c-solution_icon
-              img.lazy(data-src=path+"assets/images/crop.png")
+              img.lazyload(loading="lazy", width="70" height="70" data-src=path+"assets/images/heart.png" src=path+"assets/images/heart.png")
             .c-solution_extra Secure your future high quality retirement with High Annual Income and Tax Free Retirement
           li
             //- .c-solution_tag Estate Planning
             .c-solution_name Estate Planning
             .c-solution_icon
-              img.lazy(data-src=path+"assets/images/crop.png")
+              img.lazyload(loading="lazy", width="70" height="70" data-src=path+"assets/images/home.png" src=path+"assets/images/home.png")
             .c-solution_extra Step-by-step helping clients make a sensible legacy plan for each of their loved ones
     .c-button
-      a.c-button_inner.bounceIn(href="#")
+      a.c-button_inner.bounceIn(href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation", target="_blank")
           p Bạn có muốn làm chủ tương lai?
           p Đừng ngần ngại tìm hiểu cùng Jolie!
     .c-trust
-        h3 Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:
+        h3 There are 1000+ customers who have chosen to accompany Jolie, because:
         p  Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.
         ul
          li
           .c-trust_icon
-            img.lazy(data-src=path+"assets/images/crop.png")
+            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
           h3 Trusted Partners
           p Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products
          li
           .c-trust_icon
-            img.lazy(data-src=path+"assets/images/crop.png")
+            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
           h3 #1 Customer Service
           p Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.
          li
           .c-trust_icon
-            img.lazy(data-src=path+"assets/images/crop.png")
+            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
           h3 Professional
           p Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.
          li
           .c-trust_icon
-            img.lazy(data-src=path+"assets/images/crop.png")
-          h3 Best Offer 
+            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
+          h3 Best Offer
           p Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs.
             | To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash
     .c-boss
       .c-boss_img
-        img.lazy(data-src="https://api.lorem.space/image/fashion?w=400&h=400", alt="")
+        img.lazyload(loading="lazy", data-src=path+"assets/images/jolie-phan.jpg", src=path+"assets/images/jolie-phan.jpg" alt="")
       .c-boss_content
-        h3 Giới Thiệu
-        p JOLIE PHAN - JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.
+        h3 About JOLIE PHAN
+        p JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.
         p With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement
       ul
         li
-            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
         li
-            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
         li
-            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
         li
-            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
     .c-video
         h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
         ul
           li
-            iframe(src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            iframe( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
           li
-            iframe(src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            iframe( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
     .c-user
       h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
@@ -152,53 +139,16 @@ block container
         .c-user_list.user-slider
           .c-user_item
             .c-user_img
-                img(src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
+                img.lazyload( loading="lazy", data-src="https://api.lorem.space/image/fashion?w=250&h=250" src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
             h4 Diễn viên hài
             p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
           .c-user_item
             .c-user_img
-                img(src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
+                img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=250&h=250" src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
             h4 Diễn viên hài
             p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
           .c-user_item
             .c-user_img
-                img(src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
+                img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=250&h=250" src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
             h4 Diễn viên hài
             p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
-
-
-    .c-contact.d-none
-      ul 
-        li 
-          h3 Đăng ký dịch vụ Marketing 
-          p Sự Tận tâm và Kỹ lưỡng chính là hai yếu tố tiên quyết được đội ngũ của Jolie đặt vào trong từng hợp đồng, để mỗi khách hàng đều nắm được tường tận những quỹ tài chính mà đang làm chủ.
-        li
-          form(action='/signup' method='post')
-            p
-              label First name
-              br
-              input(type='text' name='first_name')
-            p
-              label Last name
-              br
-              input(type='text' name='last_name')
-            p
-              label Email
-              br
-              input(type='email' name='email' required='')
-            p
-              label Phone number
-              br
-              input(type='tel' name='phone')
-            p
-              label Password
-              br
-              input(type='password' name='password')
-            p
-              label
-                input(type='checkbox' value='terms')
-                |       I agree to the 
-                a(href='/terms') terms and conditions
-            p
-              button Sign up
-              button(type='reset') Reset form
