--- a/root/scss/1_layout/_layout.scss
+++ b/root/scss/1_layout/_layout.scss
@@ -8,9 +8,9 @@
 }
 .l-container{
 	padding: 0 5%;
-	@include sp{
-		margin-right: -10px;
-	}
+	// @include sp{
+	// 	margin-right: -10px;
+	// }
 }
 .d-none{
 	display: none;
